--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_APPWRITE_PROJECT_ID="65ff2aca33358ff9d94c"
 VITE_APPWRITE_DATABASE_ID="66025d9c8243c77e7e49"
 VITE_APPWRITE_COLLECTION_ID="66025e02572abb1043b4"
 VITE_APPWRITE_BUCKET_ID="66025f876b3f208e0eb8"
+VITE_RTE_API_KEY="8lufa9k4ymy3s4g4f3r7v8ayyu3opgb28yfrns1o59pnz1am"
+
